spacing fix

--- a/src/Styles/Partials/_header.scss
+++ b/src/Styles/Partials/_header.scss
@@ -29,7 +29,7 @@
     }
 
     .wrapper {
-        margin-left:30%;
+        margin-left:25%;
     }
 
     .Header__text {
@@ -92,7 +92,7 @@
 
     .BigHero {
         float:right;
-        margin: 0 20% 0 0;
+        margin: 0 18% 0 0;
     }
     .Header__more {
         padding-top: 10%;
