--- a/src/Styles/Partials/_navigation.scss
+++ b/src/Styles/Partials/_navigation.scss
@@ -2,14 +2,14 @@
     .Navigation {
         position:relative;
         z-index: 98;
-        margin: -30% 5% 44% 5%;
+        margin: -31% 5% 44% 5%;
         width:100%;
         display: flex;
         a {
             text-decoration: none;
             color:#fff;
             font-weight:bold;
-            font-size: 120%;
+            font-size: 105%;
             margin: 0 0 0 0%;
             text-transform: uppercase;
         }
