--- a/src/Styles/Partials/_punits.scss
+++ b/src/Styles/Partials/_punits.scss
@@ -30,12 +30,13 @@
         max-width: 5.5%;
         min-width: 30px;
         svg {
-            display: block
+            display: inline-flex
         }
     }
     .tools {
-        display:flex;
-        justify-content: center;
+        width:auto;
+        display:inline-flex;
+        flex-direction: row;
     }
 }
 
@@ -57,6 +58,9 @@
             letter-spacing: 1px;
             font-weight: 100;
             color:#5d5d5d;
+            span {
+                display:none
+            }
         }
         &__text {
             font-size: 70%;
@@ -70,12 +74,12 @@
     }
     .svgicon {
         max-width: 9.5%;
-        min-width: 20px
+        min-width: 20px;
+        display: inline-flex;
     }
     .tools {
+        margin-top: 2.5%;
         white-space: nowrap;
-        margin-left: 1.5%;
-        margin-top: 1%;
         display:flex;
         justify-content: center;
         align-items: center;
